Implemented a genetic algorithm to solve this problem